site- cep web service

--- a/views/admin/categories-products.html
+++ b/views/admin/categories-products.html
@@ -3,13 +3,13 @@
 <!-- Content Header (Page header) -->
 <section class="content-header">
   <h1>
-    Produtos da Categoria {$descategory}
+    Produtos da Categoria {$category.descategory}
   </h1>
   <ol class="breadcrumb">
     <li><a href="/admin"><i class="fa fa-dashboard"></i> Home</a></li>
     <li><a href="/admin/categories">Categorias</a></li>
-    <li><a href="/admin/categories/{$idcategory}">{$descategory}</a></li>
-    <li class="active"><a href="/admin/categories/{$idcategory}/products">Produtos</a></li>
+    <li><a href="/admin/categories/{$category.idcategory}">{$category.descategory}</a></li>
+    <li class="active"><a href="/admin/categories/{$category.idcategory}/products">Produtos</a></li>
   </ol>
 </section>
 
@@ -39,7 +39,7 @@
                             <td>{$value.idproduct}</td>
                             <td>{$value.desproduct}</td>
                             <td>
-                                <a href="/admin/categories/{$idcategory}/products/{$value.idproduct}/add" class="btn btn-primary btn-xs pull-right"><i class="fa fa-arrow-right"></i> Adicionar</a>
+                                <a href="/admin/categories/{$category.idcategory}/products/{$value.idproduct}/add" class="btn btn-primary btn-xs pull-right"><i class="fa fa-arrow-right"></i> Adicionar</a>
                             </td>
                             </tr>
                             {/loop}
@@ -51,7 +51,7 @@
         <div class="col-md-6">
             <div class="box box-success">
                 <div class="box-header with-border">
-                <h3 class="box-title">Produtos na Categoria {$descategory}</h3>
+                <h3 class="box-title">Produtos na Categoria {$category.descategory}</h3>
                 </div>
                 <!-- /.box-header -->
                 <!-- form start -->
@@ -70,7 +70,7 @@
                             <td>{$value.idproduct}</td>
                             <td>{$value.desproduct}</td>
                             <td>
-                                <a href="/admin/categories/{$idcategory}/products/{$value.idproduct}/remove" class="btn btn-primary btn-xs pull-right"><i class="fa fa-arrow-left"></i> Remover</a>
+                                <a href="/admin/categories/{$category.idcategory}/products/{$value.idproduct}/remove" class="btn btn-primary btn-xs pull-right"><i class="fa fa-arrow-left"></i> Remover</a>
                             </td>
                             </tr>
                             {/loop}
