--- a/views/admin/categories-update.html
+++ b/views/admin/categories-update.html
@@ -18,11 +18,11 @@
         </div>
         <!-- /.box-header -->
         <!-- form start -->
-        <form role="form" action="/admin/categories/{$idcategory}" method="post">
+        <form role="form" action="/admin/categories/{$category.idcategory}" method="post">
           <div class="box-body">
             <div class="form-group">
               <label for="descategory">Nome da categoria</label>
-              <input type="text" class="form-control" id="descategory" name="descategory" placeholder="Digite o nome da categoria" value="{$descategory}">
+              <input type="text" class="form-control" id="descategory" name="descategory" placeholder="Digite o nome da categoria" value="{$category.descategory}">
             </div>
           </div>
           <!-- /.box-body -->
