--- a/views/login.html
+++ b/views/login.html
@@ -50,28 +50,26 @@
             </div>
             <div class="col-md-6">
                 
-                 {if="$errorRegister != ''"}
                 <div class="alert alert-danger">
-                    {$errorRegister}
+                    Error!
                 </div>
-                {/if}
 
                 <form id="register-form-wrap" action="/register" class="register" method="post">
                     <h2>Criar conta</h2>
                     <p class="form-row form-row-first">
                         <label for="nome">Nome Completo <span class="required">*</span>
                         </label>
-                        <input type="text" id="nome" name="name" class="input-text" value="{$registerValues.name}">
+                        <input type="text" id="nome" name="name" class="input-text" value="">
                     </p>
                     <p class="form-row form-row-first">
                         <label for="email">E-mail <span class="required">*</span>
                         </label>
-                        <input type="email" id="email" name="email" class="input-text" value="{$registerValues.email}">
+                        <input type="email" id="email" name="email" class="input-text" value="">
                     </p>
                     <p class="form-row form-row-first">
                         <label for="phone">Telefone
                         </label>
-                        <input type="text" id="phone" name="phone" class="input-text" value="{$registerValues.phone}">
+                        <input type="text" id="phone" name="phone" class="input-text" value="">
                     </p>
                     <p class="form-row form-row-last">
                         <label for="senha">Senha <span class="required">*</span>
@@ -86,7 +84,6 @@
 
                     <div class="clear"></div>
                 </form>               
-           
             </div>
         </div>
     </div>
