--- a/views/product-detail.html
+++ b/views/product-detail.html
@@ -3,7 +3,7 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="product-bit-title text-center">
-                    <h2>{$desproduct}</h2>
+                    <h2>{$products.desproduct}</h2>
                 </div>
             </div>
         </div>
@@ -17,26 +17,26 @@
                 <div class="product-content-right">
                     <div class="product-breadcroumb">
                         <a href="/">Home</a>
-                        <a href="">{$desproduct}</a>
+                        <a href="">{$products.desproduct}</a>
                     </div>
                     
                     <div class="row">
                         <div class="col-sm-6">
                             <div class="product-images">
                                 <div class="product-main-img">
-                                    <img src="{$desphoto}">
+                                    <img src="{$products.desphoto}">
                                 </div>
                             </div>
                         </div>
                         
                         <div class="col-sm-6">
                             <div class="product-inner">
-                                <h2 class="product-name">{$desproduct}</h2>
+                                <h2 class="product-name">{$products.desproduct}</h2>
                                 <div class="product-inner-price">
-                                    <ins>${function="formatPrice($vlprice)"}</ins>
+                                    <ins>${function="formatPrice($products.vlprice)"}</ins>
                                 </div>    
                                 
-                                <form action="/cart/{$idproduct}/add" class="cart">
+                                <form action="/cart/{$products.idproduct}/add" class="cart">
                                     <div class="quantity">
                                         <input type="number" size="4" class="input-text qty text" title="Qty" value="1" name="quantity" min="1" step="1">
                                     </div>
