ajuste address number

--- a/views/categories-menu.html
+++ b/views/categories-menu.html
@@ -1,1 +1,1 @@
-<li><a href="/categories/1 ">categoria 1</a></li><li><a href="/categories/3 ">categoria 3</a></li><li><a href="/categories/7 ">ain sou gay</a></li>
+<li><a href="/categories/1 ">categoria 1</a></li><li><a href="/categories/3 ">categoria 3</a></li>
